--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_storage: ^11.6.0
+  get: ^4.6.5
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   firebase_core: ^2.24.2
-  firebase_storage: ^11.6.0
-  get: ^4.6.5
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,9 @@ flutter:
     - assets/images/login-bro.png
     - assets/images/login.png
     - assets/images/signin.png
+    - assets/images/account.png
+    - assets/images/google.png
+    - assets/images/phone.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
